--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,8 +6,9 @@
 - type: twitter
   icon: "fa-brands fa-x-twitter"
 
-- type: email
-  icon: "fas fa-envelope"
+- type: linkedin
+  icon: 'fab fa-linkedin'   
+  url: 'https://www.linkedin.com/in/mark-cummins-a0878b16/'
   noblank: true # open link in current tab
 
 - type: rss
