--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ timezone: Europe/Dublin
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: EXploringSecurity 
+title: EXploring Security 
 
-tagline: Academic/Educator | CTF Enthusiast  
+tagline: Educator | CTF Enthusiast  
 
 description: >- 
   The ramblings of my adventures into all things technical, both from a personal and work life perspecitve.
