Update _config.yml fixed typo

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ timezone: Europe/Dublin
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: EXploring Security 
+title: Exploring Security 
 
 tagline: Educator | CTF Enthusiast  
 
